@@ -1,3 +1,15 @@
+2009-01-20  Pierre-Olivier Latour  <pol@apple.com>
+
+        Reviewed by Darin Adler.
+
+        Changed run-webkit-tests to abort on the Mac if pixel tests are enabled and Perian is installed,
+        in order to avoid result differences in some media tests.
+
+        https://bugs.webkit.org/show_bug.cgi?id=22615
+
+        * Scripts/run-webkit-tests:
+        * Scripts/webkitdirs.pm:
+
 2009-01-19  Sam Weinig  <sam@webkit.org>
 
         * Scripts/do-webcore-rename: Add JSValuePtr and ProtectedJSValuePtr.
